--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "plasmo dev",
     "build": "plasmo build",
     "package": "plasmo package",
+    "share": "npm run build && node scripts/create-share-package.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "compromise": "^14.14.4",
     "js-tiktoken": "^1.0.21",
     "plasmo": "^0.88.0",
     "react": "^18.2.0",
