feat: implement inline icon button with intelligent prompt shortening
- Add Grammarly-style inline 'P' icon button that appears in textarea on focus
- Implement dropdown menu with Analyze, Shorten, and Framework options
- Add intelligent prompt shortening using compressPrompt (preserves meaning)
- Implement platform/model detection (ChatGPT, Claude, Gemini, etc.)
- Display token reduction with model-specific calculations
- Fix framework selector freezing issue with proper event handlers
- Keep icon visible after actions for better UX
- Clean up unnecessary markdown documentation files
- Remove console.log statements and unused code

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "PromptPrune Team",
   "scripts": {
     "dev": "plasmo dev",
-    "build": "plasmo build",
+    "build": "plasmo build && node scripts/fix-manifest.js",
     "package": "plasmo package",
     "share": "npm run build && node scripts/create-share-package.js",
     "test": "vitest",
@@ -32,6 +32,7 @@
     "@vitest/coverage-v8": "^1.1.0",
     "@vitest/ui": "^1.1.0",
     "autoprefixer": "^10.4.16",
+    "glob": "^11.0.3",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
