fix: standardize P icon and field buttons positioning across platforms
- Fixed P icon positioning to be consistent across all platforms (8px from top, 8px from right)
- Aligned field buttons in same column as P icon for consistent UI
- Fixed dropdown toggle functionality (click to open/close)
- Improved icon visibility logic (shows when textarea focused or has text)
- Enhanced field button visibility and positioning
- Optimized performance with debouncing and better event handling
- Removed duplicate icon creation issues
- Improved textarea detection with WeakSet to prevent duplicates
- Added proper validation for visible textareas only

--- a/.plasmo/chrome-mv3.plasmo.manifest.json
+++ b/.plasmo/chrome-mv3.plasmo.manifest.json
@@ -24,6 +24,33 @@
   "permissions": [
     "storage"
   ],
+  "content_scripts": [
+    {
+      "matches": [
+        "https://chat.openai.com/*",
+        "https://chatgpt.com/*",
+        "https://claude.ai/*",
+        "https://gemini.google.com/*",
+        "https://gemini.google.com/app/*",
+        "https://www.perplexity.ai/*",
+        "https://perplexity.ai/*",
+        "https://poe.com/*",
+        "https://grok.com/*",
+        "https://x.com/*",
+        "https://twitter.com/*",
+        "https://copilot.microsoft.com/*",
+        "https://manus.im/*",
+        "https://www.deepseek.com/*",
+        "https://deepseek.com/*",
+        "https://www.midjourney.com/*",
+        "https://midjourney.com/*"
+      ],
+      "js": [
+        "../src/content.ts"
+      ],
+      "run_at": "document_idle"
+    }
+  ],
   "host_permissions": [
     "http://localhost/*",
     "http://127.0.0.1/*"
