--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@xenova/transformers": "^2.17.2",
     "compromise": "^14.14.4",
     "js-tiktoken": "^1.0.21",
+    "onnxruntime-web": "^1.23.2",
     "plasmo": "^0.88.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -59,7 +60,9 @@
       "https://www.deepseek.com/*",
       "https://deepseek.com/*",
       "https://www.midjourney.com/*",
-      "https://midjourney.com/*"
+      "https://midjourney.com/*",
+      "https://huggingface.co/*",
+      "https://*.huggingface.co/*"
     ],
     "permissions": [
       "storage",
