feat: enhance sensitive content detection, compliance classification, and masking reliability
- Add compliance classification (HIPAA, GDPR, PCI, SOX, SOC2, Indian PDPB)
- Add comprehensive technical secret detection (Slack, Stripe, GitHub, SSH, etc.)
- Improve India-specific PII detection (PAN, Aadhaar, UPI, etc.)
- Refactor masking logic to be case-insensitive and support contenteditable editors
- Optimize realtime performance by debouncing heavy operations and removing ML from input loop
- Fix various type errors and import issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   },
   "include": [
     ".plasmo/index.d.ts",
