feat: Add Google OAuth authentication and fix performance issues
- Add Google OAuth authentication with client ID configuration
- Implement auth service with login/logout functionality
- Add login screen component with Google sign-in
- Update capsule UI to lock/unlock based on auth state
- Add message passing between popup and content scripts for auth state sync
- Add periodic auth check (5s interval) as fallback mechanism
- Fix typing performance issues:
  - Move QualityScore updates to blur/idle (removed from input events)
  - Increase TokenCounter debounce to 2000ms
  - Remove framework suggestions during typing to prevent hangs
  - Use regex-only detection during typing, ML on submission
- Improve sensitive content detection:
  - Add compliance classifications (HIPAA, GDPR, PCI-DSS, etc.)
  - Add new detection patterns (Slack tokens, Stripe keys, SSH keys, localhost)
  - Improve masking functionality with originalValue tracking
  - Add standalone PAN and Aadhaar detection patterns
- Clean up unused code:
  - Remove browser-inference-transformers.ts (unused)
  - Remove model-worker-manager.ts (unused)
  - Remove check-model-files.js and test-intent-framework.js
  - Remove deprecated findClosestWord function
- Fix build errors:
  - Restore unified-model-manager.ts and transformers-config.ts
  - Fix Pipeline type errors in model managers
  - Add path alias configuration in tsconfig.json
  - Fix context-detector import error in prompt-template.ts
- Revert rankFrameworks changes to original working version

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@plasmohq/storage": "^1.15.0",
     "@xenova/transformers": "^2.17.2",
     "compromise": "^14.14.4",
     "js-tiktoken": "^1.0.21",
@@ -68,7 +69,15 @@
       "storage",
       "unlimitedStorage",
       "scripting",
-      "tabs"
-    ]
+      "tabs",
+      "identity"
+    ],
+    "oauth2": {
+      "client_id": "1072024805594-7pt4fg4vhmj7m357m28ntqsb0q3fnkvp.apps.googleusercontent.com",
+      "scopes": [
+        "https://www.googleapis.com/auth/userinfo.email",
+        "https://www.googleapis.com/auth/userinfo.profile"
+      ]
+    }
   }
 }
