--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build && node scripts/fix-manifest.js",
+    "build:dev": "GROOT_API_URL=http://localhost:8080/api/v1 npm run build",
     "build:prod": "GROOT_API_URL=https://groot-backend-prod-luun7betqa-el.a.run.app/api/v1 npm run build",
     "package": "plasmo package",
-    "share": "npm run build && node scripts/create-share-package.js",
+    "share": "npm run build:prod && node scripts/create-share-package.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage"
