--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@plasmohq/storage": "^1.15.0",
     "@xenova/transformers": "^2.17.2",
     "compromise": "^14.14.4",
+    "indiankit": "^1.0.0",
     "js-tiktoken": "^1.0.21",
     "onnxruntime-web": "^1.23.2",
     "plasmo": "^0.88.0",
@@ -41,6 +42,7 @@
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
