feat: migrate to offscreen document architecture with ML engine and improved UX
Major architectural improvements and new ML capabilities:

- Migrate ML model execution to offscreen document for Manifest V3 compatibility
- Add ML engine with GLiNER model for hybrid PII detection (regex + ML)
- Add Qwen2.5-0.5B-Instruct model for intelligent prompt optimization
- Implement IndexedDB model caching for persistent model storage across sessions
- Add follow-up message detection for smart template prefill (Summarize vs full template)
- Improve model download UX with closeable overlay and background download support
- Add hybrid PII detection API integration with fallback to regex-only mode
- Refactor background service worker to use offscreen document messaging
- Update transformers.js configuration to use Groot HF proxy for model downloads
- Clean up unused test files, old model managers, and deprecated code
- Improve error handling and logging throughout ML pipeline

This enables local-first ML processing with persistent caching, better UX,
and hybrid PII detection combining regex patterns with GLiNER NER model.

Note: Documentation .md files are excluded from this commit.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ dist
 extension_key*.pem
 *_key_private.pem
 *.pem
+
+# Transformers assets SHOULD be committed (not ignored)
+# They're small (~2-3MB) and needed for Local Asset Bridge
+# !assets/transformers/
