--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "promptprune",
   "displayName": "PromptPrune",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Optimize AI prompts to reduce token usage and costs using local processing",
   "author": "PromptPrune Team",
   "scripts": {
